// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<BaseText /> should render regular text 1`] = `
<div>
  <div
    class="StyledBaseTextweb__StyledBaseText-sc-1t5p7u8-0 kwcGaE"
    color="hsla(0, 0%, 100%, 1)"
    font-family="Lato, -apple-system, BlinkMacSystemFont, \\"Segoe UI\\", Roboto, Helvetica, sans-serif, \\"Apple Color Emoji\\", \\"Segoe UI Emoji\\", \\"Segoe UI Symbol\\""
    font-size="0.625rem"
    font-style="normal"
    font-weight="400"
  >
    Displaying some text
  </div>
</div>
`;

exports[`<BaseText /> should render text as paragraph element 1`] = `
<div>
  <p
    class="StyledBaseTextweb__StyledBaseText-sc-1t5p7u8-0 kQtveL"
    color="hsla(0, 0%, 100%, 1)"
    font-family="Lato, -apple-system, BlinkMacSystemFont, \\"Segoe UI\\", Roboto, Helvetica, sans-serif, \\"Apple Color Emoji\\", \\"Segoe UI Emoji\\", \\"Segoe UI Symbol\\""
    font-size="0.625rem"
    font-style="italic"
    font-weight="400"
  >
    Displaying some text
  </p>
</div>
`;

exports[`<BaseText /> should render text in italics style with line-through 1`] = `
<div>
  <div
    class="StyledBaseTextweb__StyledBaseText-sc-1t5p7u8-0 kQtveL"
    color="hsla(0, 0%, 100%, 1)"
    font-family="Lato, -apple-system, BlinkMacSystemFont, \\"Segoe UI\\", Roboto, Helvetica, sans-serif, \\"Apple Color Emoji\\", \\"Segoe UI Emoji\\", \\"Segoe UI Symbol\\""
    font-size="0.625rem"
    font-style="italic"
    font-weight="400"
  >
    Displaying some text
  </div>
</div>
`;

exports[`<BaseText /> should render text with default properties 1`] = `
<div>
  <div
    class="StyledBaseTextweb__StyledBaseText-sc-1t5p7u8-0 oxwSH"
    color="hsla(217, 56%, 17%, 1)"
    font-family="Lato, -apple-system, BlinkMacSystemFont, \\"Segoe UI\\", Roboto, Helvetica, sans-serif, \\"Apple Color Emoji\\", \\"Segoe UI Emoji\\", \\"Segoe UI Symbol\\""
    font-size="1rem"
    font-style="normal"
    font-weight="400"
  >
    Displaying some text
  </div>
</div>
`;
